Discovered an alignment issue in contact/support, fixed it

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -34,6 +34,11 @@ article div {
     margin-bottom: 1.5rem;
 }
 
+.desktop-right {
+    display: flex;
+    flex-direction: column;
+}
+
 button a {
     font-weight: 300;
     font-size: 1rem;
